--- a/action-a/action.yml
+++ b/action-a/action.yml
@@ -6,12 +6,15 @@ inputs:
   MY_NAME:
     description: "Who to greet"
     required: true
-    default: "World"
+  MY_SIRNAME:
+    description: "Family name"
+    required: false
+    default: "Targaç"
 
 runs:
   using: "docker"
   image: "Dockerfile"
 
 branding:
-  icon: "mic"
+  icon: "terminal"
   color: "purple"
