filter branches to run the action, add the option to run manually

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: A workflow for my Hello World file
-on: push
+on:
+  push:
+    branches:
+      - 'main'
+  workflow_dispatch:
 
 jobs:
   build:
